{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 137,
  "lineage": "f40e5698-4cb2-2438-66dc-f740e3168ccb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07860a2d7eb515d9a",
            "arn": "arn:aws:ec2:us-east-1:083564747220:instance/i-0b8aaa0954c3575c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8aaa0954c3575c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c00c1070030fb62"
              }
            ],
            "primary_network_interface_id": "eni-03c00c1070030fb62",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-13-219-243-157.compute-1.amazonaws.com",
            "public_ip": "13.219.243.157",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ffefef442503c92",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e18bde64e20fab1",
            "tags": {
              "Name": "ac1-instance",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "ac1-instance",
              "terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e970bf293f82a271"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "i-0b8aaa0954c3575c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ac1_sg",
            "aws_subnet.ac1_public_subnet",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ac1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:internet-gateway/igw-09da2bb6895c68b45",
            "id": "igw-09da2bb6895c68b45",
            "owner_id": "083564747220",
            "region": "us-east-1",
            "tags": {
              "Name": "ac1-igw"
            },
            "tags_all": {
              "Name": "ac1-igw"
            },
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ac1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:loadbalancer/app/ac1-lb/e547668cf3caba22",
            "arn_suffix": "app/ac1-lb/e547668cf3caba22",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ac1-lb-1167015144.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:083564747220:loadbalancer/app/ac1-lb/e547668cf3caba22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ac1-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0c52c374429917027"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e18bde64e20fab1"
              },
              {
                "subnet_id": "subnet-0b30c93f42d9cdd1b"
              }
            ],
            "subnets": [
              "subnet-07e18bde64e20fab1",
              "subnet-0b30c93f42d9cdd1b"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04961e278bc9267bb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:loadbalancer/app/ac1-lb/e547668cf3caba22"
          },
          "dependencies": [
            "aws_security_group.ac1_lb_sg",
            "aws_subnet.ac1_public_subnet",
            "aws_subnet.ac1_public_subnet_2",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ac1_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener/app/ac1-lb/e547668cf3caba22/e9990612cabff697",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener/app/ac1-lb/e547668cf3caba22/e9990612cabff697",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:loadbalancer/app/ac1-lb/e547668cf3caba22",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener/app/ac1-lb/e547668cf3caba22/e9990612cabff697"
          },
          "dependencies": [
            "aws_lb.ac1_lb",
            "aws_lb_target_group.ac1_tg",
            "aws_security_group.ac1_lb_sg",
            "aws_subnet.ac1_public_subnet",
            "aws_subnet.ac1_public_subnet_2",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ac1_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener-rule/app/ac1-lb/e547668cf3caba22/e9990612cabff697/b7e067b9c0146735",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener-rule/app/ac1-lb/e547668cf3caba22/e9990612cabff697/b7e067b9c0146735",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener/app/ac1-lb/e547668cf3caba22/e9990612cabff697",
            "priority": 100,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:listener-rule/app/ac1-lb/e547668cf3caba22/e9990612cabff697/b7e067b9c0146735"
          },
          "dependencies": [
            "aws_lb.ac1_lb",
            "aws_lb_listener.ac1_listener",
            "aws_lb_target_group.ac1_tg",
            "aws_security_group.ac1_lb_sg",
            "aws_subnet.ac1_public_subnet",
            "aws_subnet.ac1_public_subnet_2",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330",
            "arn_suffix": "targetgroup/ac1-tg/3e437fc2406de330",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ac1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330"
          },
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ac1_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330-20251028191917114200000003",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083564747220:targetgroup/ac1-tg/3e437fc2406de330",
            "target_id": "i-0b8aaa0954c3575c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ac1_instance",
            "aws_lb_target_group.ac1_tg",
            "aws_security_group.ac1_sg",
            "aws_subnet.ac1_public_subnet",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:route-table/rtb-0387d8b7afdbecb7c",
            "id": "rtb-0387d8b7afdbecb7c",
            "owner_id": "083564747220",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09da2bb6895c68b45",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac1-rt"
            },
            "tags_all": {
              "Name": "ac1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "rtb-0387d8b7afdbecb7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ac1_igw",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac1_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c25f04992aa5e3a",
            "region": "us-east-1",
            "route_table_id": "rtb-0387d8b7afdbecb7c",
            "subnet_id": "subnet-07e18bde64e20fab1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ac1_igw",
            "aws_route_table.ac1_rt",
            "aws_subnet.ac1_public_subnet",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ac1_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ea0d9485b86b78",
            "region": "us-east-1",
            "route_table_id": "rtb-0387d8b7afdbecb7c",
            "subnet_id": "subnet-0b30c93f42d9cdd1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ac1_igw",
            "aws_route_table.ac1_rt",
            "aws_subnet.ac1_public_subnet_2",
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac1_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:security-group/sg-0c52c374429917027",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c52c374429917027",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ac1-lb-sg",
            "name_prefix": "",
            "owner_id": "083564747220",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ac1-lb-sg"
            },
            "tags_all": {
              "Name": "terraform-ac1-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "sg-0c52c374429917027",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:security-group/sg-0e970bf293f82a271",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e970bf293f82a271",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ac1-sg",
            "name_prefix": "",
            "owner_id": "083564747220",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ac1-sg"
            },
            "tags_all": {
              "Name": "terraform-ac1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "sg-0e970bf293f82a271",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:subnet/subnet-07e18bde64e20fab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e18bde64e20fab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083564747220",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ac1-public-subnet"
            },
            "tags_all": {
              "Name": "ac1-public-subnet"
            },
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "subnet-07e18bde64e20fab1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac1_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:subnet/subnet-0b30c93f42d9cdd1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30c93f42d9cdd1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083564747220",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ac1-public-subnet-2"
            },
            "tags_all": {
              "Name": "ac1-public-subnet-2"
            },
            "vpc_id": "vpc-04961e278bc9267bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "subnet-0b30c93f42d9cdd1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_ac1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ac1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083564747220:vpc/vpc-04961e278bc9267bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b27a7a61de2e7eb3",
            "default_route_table_id": "rtb-096c76adce9c10e16",
            "default_security_group_id": "sg-0a0833083c41ecf76",
            "dhcp_options_id": "dopt-0b6b5b07e388444f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04961e278bc9267bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096c76adce9c10e16",
            "owner_id": "083564747220",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-ac1"
            },
            "tags_all": {
              "Name": "vpc-ac1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "083564747220",
            "id": "vpc-04961e278bc9267bb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}